fix swagger agronomy
